<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智慧校园</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="remeberPwd">记住密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="login">登录</string>
    <string name="smart_agriculture_href">© 2016 山东农业大学</string>
	<string name="smart_agriculture">© 2016 山东农业大学智慧农业实验室</string>
	<string name="login_quick">取消</string>
	<string name="logging">正在登录...</string>
    <string name="action_feed">意见反馈</string>
    <string name="action_group_chat">发起群聊</string>
    <string name="action_add_friend">添加朋友</string>
    <string name="action_scan">扫一扫</string>
    <string name="action_search">搜索</string>
    <string name="action_add">添加</string>
    <string name="tab_show">座位</string>
    <string name="tab_analyse">图书</string>
    <string name="tab_control">通知</string>
    <string name="tab_setting">我</string>
    <string name="all_seat">查看座位信息</string>
    <string name="wifi">wifi名字</string>
    <string name="history">搜索历史</string>
    <string name="button_logout">退出登录</string>
    
    <string-array name="flow">
        <item >二楼</item>
        <item >三楼</item>
        <item >四楼</item>
        <item >五楼</item>
    </string-array>
    <string-array name="area">
        <item >南区</item>
        <item >北区</item>
        <item >中区</item>
    </string-array>
    
    <drawable name="clr_normal">#ffffff</drawable>
    <drawable name="clr_pressed">#0000ff</drawable>
</resources>
