<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout 
        android:layout_width="fill_parent"
        android:layout_height="140dp">
	    <android.support.v4.view.ViewPager
	        android:id="@+id/vp_fragment_3"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent">
	    </android.support.v4.view.ViewPager>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="35dip"
	        android:layout_gravity="bottom"
	        android:background="#33000000"
	        android:gravity="center"
	        android:orientation="vertical">
	        <TextView 
	            android:id="@+id/tv_title"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text=""
	            android:textColor="#ffffff"/>
	         <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:gravity="center">
                <View 
                    android:id="@+id/v_dot0"
                    style="@style/dot_style"
                    android:background="@drawable/dot_focused"/>
                <View 
                    android:id="@+id/v_dot1"
                    style="@style/dot_style"/>
                <View 
                    android:id="@+id/v_dot2"
                    style="@style/dot_style"/>
                <View 
                    android:id="@+id/v_dot3"
                    style="@style/dot_style"/>
                <View 
                    android:id="@+id/v_dot4"
                    style="@style/dot_style"/>
            </LinearLayout>
	    </LinearLayout>
	</FrameLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginLeft="50dp">
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="楼层:"
	            android:layout_gravity="center"/>
		    <Spinner
		        android:id="@+id/sp_flow"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="21dp"
		        android:entries="@array/flow" />
		</LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginLeft="50dp">
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="区:"
	            android:layout_gravity="center"/>
		    <Spinner
		        android:id="@+id/sp_area"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="21dp"
		        android:entries="@array/area"/>
		</LinearLayout>
	</LinearLayout>

    <Button
        android:id="@+id/btn_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="查询" 
        android:background="@drawable/bg_edittext"
        android:textColor="@color/blue"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
	        android:id="@+id/tv_wifi"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginTop="12dp"
	        android:text="@string/wifi"
	        android:maxLines="3"
	        android:textColor="@color/blue" />
    	<TextView
	        android:id="@+id/tv_seeallseat"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginTop="12dp"
	        android:text="@string/all_seat"
	        android:textColor="@color/blue" />
	        <!-- android:layout_marginLeft="190dp" -->
    </LinearLayout>

    <View 
         android:layout_marginTop="10dp"
         android:layout_width="fill_parent"
         android:layout_height="3dp"
         android:background="@android:color/darker_gray"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:layout_gravity="center"/>
    <ListView 
        android:id="@+id/lv_histroy"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
    </ListView>

</LinearLayout>
